# skembed

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
include/: Index.h  Model.h  ModelInitializationHolder.h  flat_embed.h  index.h  index_of_embeddings.h  index_with_model.h  llamacpp_backend.h  llamacpp_embedding_context.h  llamacpp_model.h  model.h  model_backend.h  model_initialization_holder.h  nearest_neighbor_index.h
include/abstract/: IIndex.h  IModel.h  IModelInitializationHolder.h  abstract_backend.h  abstract_embedding_context.h  abstract_flat_embed.h  abstract_index.h  abstract_index_with_model.h  abstract_model.h  abstract_model_backend.h  abstract_model_initialization_holder.h
src/: Index.cpp  Model.cpp  ModelInitializationHolder.cpp  abstract_flat_embed.cpp  flat_embed.cpp  index.cpp  index_of_embeddings.cpp  index_with_model.cpp  llamacpp_backend.cpp  llamacpp_embedding_context.cpp  llamacpp_model.cpp  main.cpp  model.cpp  model_backend.cpp  model_initialization_holder.cpp  nearest_neighbor_index.cpp
